Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,10 @@
+@import './base/grid.scss';
+
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 @import './base/reset.scss';
 
+@import './layout/header.scss';
+
+@import './base/spacing.scss';
 
