--- a/src/app/features/dashboard/dashboard.html
+++ b/src/app/features/dashboard/dashboard.html
@@ -1,23 +1,23 @@
-<fix-header></fix-header>
-  
-<mat-card class="example-card">
-    <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-        <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-        </p>
+<!-- <fix-header></fix-header> -->
+<div style="padding: 20px;"> 
+<mat-card>
+    <mat-card-content class="mat-card-content">
+        <div class="row">
+            <div class="col-md-2 col-xs-12">
+                <img class="radius-10" style="height: 150px;" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+            </div>
+            <div class="col-md-10 col-xs-12">
+                <div style="float: left;width:100%;">
+                    <div>Project Name</div>
+                    <div>Friday, September</div>
+                    <div>Friday, September</div>
+                </div>
+                <div>
+                    sdfghj
+                </div>
+                <div>23</div>
+            </div>
+        </div>
     </mat-card-content>
-    <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-    </mat-card-actions>
 </mat-card>
-
-<h1>Helloooo</h1>  
+</div>
