--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -1,4 +1,4 @@
-$spaceamounts: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20); // Adjust this to include the pixel amounts you need.
+$spaceamounts: (5, 10, 15, 20, 25, 30, 35, 40); // Adjust this to include the pixel amounts you need.
 $sides: (top, bottom, left, right); // Leave this variable alone
 
 @each $space in $spaceamounts {
