Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,3 +23,5 @@
 </mat-sidenav-container>
 
 <!-- <app-footer></app-footer> -->
+
+<!-- <dialog-overview-example-dialog></dialog-overview-example-dialog> -->
