--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -1,3 +1,28 @@
+// $main-color: #f47721;
+// $blue-color: #192135;
+// $white-color: #FFFFFF;
+
 .menu-spacer {
     flex: 1 1 auto;
+  }
+
+  .img-circle{
+    border-radius: 50%;
+  }
+  .mat-toolbar{
+    background: $white-color;
+  }
+
+  button.active{
+    border-bottom: 2px solid $main-color;
+    border-radius: 0px;
+    font-weight: 600;
+  }
+
+  .mat-menu-content:not(:empty) {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+  .mat-menu-panel {
+    background: $white-color !important;
   }
