--- a/src/app/shared/layout/header/sidenav-list.html
+++ b/src/app/shared/layout/header/sidenav-list.html
@@ -1,10 +1,6 @@
 <!-- <mat-sidenav #sidenav> -->
   <mat-nav-list>
-    <a href="#" mat-list-item>Menu Item 1</a>
-    <a href="#" mat-list-item>Menu Item 2</a>
-    <a href="#" mat-list-item>Menu Item 3</a>
-    <a href="#" mat-list-item>Menu Item 4</a>
-    <a href="#" mat-list-item>Menu Item 5</a>
-    <a href="#"mat-list-item>Menu Item 6</a>
+    <a href="#" mat-list-item>My Account</a>
+    <a href="#" mat-list-item>LogOut</a>
   </mat-nav-list>
 <!-- </mat-sidenav> -->
