--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,5 @@
+@import './base/variables.scss';
+
 @import './base/grid.scss';
 
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
@@ -7,4 +9,8 @@
 @import './layout/header.scss';
 
 @import './base/spacing.scss';
+
+
+
+@import './pages/dashboard.scss';
 
