--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -30,7 +30,7 @@
                 <div class="col-xs-2 text-right">
                     <a href=""><i class="material-icons main-color">file_copy</i></a>
                     <a href="" class="p-l-10 p-r-10"><i class="material-icons main-color">delete</i></a>
-                    <a href=""><i class="material-icons main-color">edit</i></a>
+                    <a href="javascript:void(0)" (click)="edit(projectDetails.projectId)"><i class="material-icons main-color">edit</i></a>
                 </div>
               </div>
               <div class="row m-t-20">
