--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submit()"> <h1 mat-dialog-title>Add Project</h1>
+<form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()"> <h1 mat-dialog-title>Add Project</h1>
 <div mat-dialog-content>
   <div class="col-sm-12 display-flex m-t-20">
     <div class="col-sm-3">
@@ -96,8 +96,8 @@
   </div>
 </div>
 <div mat-dialog-actions>
-  <button type="button" mat-button (click)="onNoClick()">No Thanks</button>
-  <button type="submit" mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
+  <button type="button" mat-button (click)="close()">No Thanks</button>
+  <button type="submit" mat-button  >Ok</button>
 </div>
 
-</form>
+</form> 
