--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="m-t-5 m-b-10">
     <mat-card-content class="mat-card-content">
         <div class="row">
             <div class="col-md-2 col-xs-12" style="height: 150px;">
@@ -7,24 +7,24 @@
             <div class="col-md-10 col-xs-12">
               <div class="row">
                 <div class="col-xs-10">
-                    <div class="text-bold"><a class="main-color font-size14" href="">Project Name</a></div>
+                <div class="text-bold"><a class="main-color font-size14" href="">{{projectDetails.projectName}}</a></div>
                     <div class="row">
-                      <div class=" col-xs-6 display-flex">
-                          <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">room</i> <span>Sector 43, Gurgaon, Haryana</span></div>
-                          <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">format_shapes</i> <span>Project Area: 2345 sqr</span></div>
+                      <div class=" col-xs-8 display-flex">
+                      <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">room</i> <span>{{projectDetails.addressLine1}}</span></div>
+                      <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">format_shapes</i> <span>Project Area: {{projectDetails.area}}</span></div>
                       </div>    
                     </div>
                     <div class="row">
-                      <div class=" col-xs-6 display-flex">
-                          <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">today</i> <span>Friday, September 13, 2019</span></div>
-                          <div class="font-size10 gray-color text-left width50Percent"><span>₹ Construction Cost: 23464 Cr</span></div>
+                      <div class=" col-xs-8 display-flex">
+                          <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">today</i> <span>September 13, 2019</span> to <span>September 13, 2019</span></div>
+                          <div class="font-size10 gray-color text-left width50Percent"><span>₹ Construction Cost: {{projectDetails.cost}}</span></div>
                       </div>    
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                       <div class=" col-xs-6 display-flex">
-                          <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">room</i> <span>Sector 43, Gurgaon, Haryana</span></div>
+                          <div class="font-size10 gray-color text-left width50Percent"><i class="material-icons font-size10 gray-color">room</i> <span>{{projectDetails.addressLine2}}</span></div>
                       </div>    
-                    </div>
+                    </div> -->
                     
                 </div>
                 <div class="col-xs-2 text-right">
@@ -55,9 +55,14 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-4 text-right">
+                  <!-- <div class="col-xs-4 text-right">
                       <button mat-raised-button class="background-white-color main-button main-color">View Project</button>
-                  </div>
+                  </div> -->
+              </div>
+              <div class="row m-t-10">
+                <div class="col-xs-12 text-right">
+                  <div class="font-size10 gray-color">Created : Thursday, November 15, 2018 By Rahul Singh (Site Enginer)</div>
+                </div>
               </div>
             </div>
         </div>
