--- a/src/app/shared/layout/header/header.html
+++ b/src/app/shared/layout/header/header.html
@@ -1,44 +1,94 @@
-  <div>
-    <mat-toolbar color="background-white-color">
-      <mat-toolbar-row>
-        <button mat-icon-button (click)="onToggleSidenav()" fxShow="true" fxHide.gt-sm>
-          <mat-icon>menu</mat-icon>
+<div class="header-fixed">
+  <mat-toolbar color="background-white-color">
+    <mat-toolbar-row>
+      <button
+        mat-icon-button
+        (click)="onToggleSidenav()"
+        fxShow="true"
+        fxHide.gt-sm
+      >
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span
+        ><img
+          height="38"
+          width="200"
+          src="../../../../assets/images/loginLogo.png"
+          alt="logo"
+      /></span>
+      <span class="menu-spacer"></span>
+      <div fxShow="true" fxHide.lt-md>
+        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+        <a href="#" mat-button>
+          <mat-icon aria-hidden="false" aria-label="Example apps icon"
+            >apps</mat-icon
+          >
+        </a>
+        <button mat-button [matMenuTriggerFor]="logIn">
+          <img
+            class="img-circle"
+            height="36"
+            width="38"
+            src="../../../../assets/images/user-image.jpg"
+            alt="Test"
+          />
+          Test
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example arrow_drop_down icon"
+            >arrow_drop_down</mat-icon
+          >
         </button>
-        <span><img height="38" width="200" src="../../../../assets/images/loginLogo.png" alt="logo"></span>
-        <span class="menu-spacer"></span>
-        <div fxShow="true" fxHide.lt-md>
-          <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-          <a href="#" mat-button>
-            <mat-icon aria-hidden="false" aria-label="Example apps icon">apps</mat-icon>
-          </a>
-          <button mat-button [matMenuTriggerFor]="logIn"><img class="img-circle" height="36" width="38" src="../../../../assets/images/user-image.jpg" alt="Test"> Test <mat-icon aria-hidden="false" aria-label="Example arrow_drop_down icon">arrow_drop_down</mat-icon></button>
-          <mat-menu #logIn="matMenu">
-            <button mat-menu-item class="background-white-color">My Account</button>
-            <button mat-menu-item class="background-white-color">LogOut</button>
-          </mat-menu>
-        </div>
-      </mat-toolbar-row>
-    </mat-toolbar>
+        <mat-menu #logIn="matMenu">
+          <button mat-menu-item class="background-white-color">
+            My Account
+          </button>
+          <button mat-menu-item class="background-white-color">LogOut</button>
+        </mat-menu>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
   <div class="col-sm-12 blue-background-color">
-    <button [class.active]="buttonName == 'projectStore'" class="color-white" mat-button (click)="setButtonName('projectStore')">Project Store</button>
+    <button
+      [class.active]="buttonName == 'projectStore'"
+      class="color-white"
+      mat-button
+      (click)="setButtonName('projectStore')"
+    >
+      Project Store
+    </button>
     <!-- <mat-menu #aboveMenu="matMenu" yPosition="above">[matMenuTriggerFor]="aboveMenu"
       <button mat-menu-item>Item 1</button>
       <button mat-menu-item>Item 2</button>
     </mat-menu> -->
 
-    <button [class.active]="buttonName == 'globalStore'" class="color-white" mat-button (click)="setButtonName('globalStore')">Global Store</button>
+    <button
+      [class.active]="buttonName == 'globalStore'"
+      class="color-white"
+      mat-button
+      (click)="setButtonName('globalStore')"
+    >
+      Global Store
+    </button>
     <!-- <mat-menu #belowMenu="matMenu" yPosition="below">[matMenuTriggerFor]="belowMenu"
       <button mat-menu-item>Item 1</button>
       <button mat-menu-item>Item 2</button>
     </mat-menu> -->
 
-    <button [class.active]="buttonName == 'users'" class="color-white" mat-button (click)="setButtonName('users')">Users</button>
+    <button
+      [class.active]="buttonName == 'users'"
+      class="color-white"
+      mat-button
+      (click)="setButtonName('users')"
+    >
+      Users
+    </button>
     <!-- <mat-menu #beforeMenu="matMenu" xPosition="before"> [matMenuTriggerFor]="beforeMenu"
       <button mat-menu-item>Item 1</button>
       <button mat-menu-item>Item 2</button>
     </mat-menu> -->
   </div>
-    <!-- <mat-sidenav-container fxFlexFill>
+  <!-- <mat-sidenav-container fxFlexFill>
       <mat-sidenav #sidenav>
         <mat-nav-list>
           <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
@@ -52,4 +102,4 @@
       </mat-sidenav>
       <mat-sidenav-content fxFlexFill>Main content</mat-sidenav-content>
     </mat-sidenav-container> -->
-  </div>
+</div>
