--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,8 +1,17 @@
 <!-- <fix-header></fix-header> -->
 <div class="page-start-point">
-  <div class="p-l-20 p-r-20 p-b-20 min">
+  <div *ngIf="!allProjects.length" class="parent min-height">
+    <button
+        mat-raised-button
+        class="main-background-color main-button color-white center-element"
+        (click)="addProject()"
+      >
+       Add New Project
+      </button>
+  </div>
+  <div *ngIf="allProjects.length>0" class="p-l-20 p-r-20 p-b-20 min-height parent">
     <!-- fix part -->
-    <div class="row p-b-10">
+    <div class="row p-t-15 p-b-10">
       <div class="col-xs-6">
         <mat-form-field class="example-form-field">
           <input
