--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -5,9 +5,21 @@ $white-color: #ffffff;
 $icon-color-gray: #b8b8b8;
 $black-color: #000000;
 $alert-color: #ff5353;
+$background-color-grey: #979797;
+
+.background-color-grey {
+  background-color: $background-color-grey;
+}
 
 .background-white-color {
   background-color: $white-color;
+}
+.full-border.mat-form-field.mat-focused input {
+  border: 2px solid $main-color;
+}
+
+.full-border.mat-form-field input {
+  border: 2px solid $icon-color-gray;
 }
 
 .color-white {
@@ -156,10 +168,10 @@ input {
   transform: translate(-50%, -50%);
 }
 
-.pull-right{
+.pull-right {
   float: right;
 }
 
-.pull-left{
+.pull-left {
   float: left;
 }
