--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -17,14 +17,14 @@
             <input
               class="p-l-10 p-b-5"
               matInput
-              placeholder="Search Category Name"
+              placeholder="Search Category Name" [(ngModel)]="searchText"
             />
             <button mat-button matSuffix mat-icon-button>
               <mat-icon>search</mat-icon>
             </button>
           </div>
           <mat-option
-            *ngFor="let category of categoryList"
+            *ngFor="let category of categoryList | SearchPipe:searchText"
             [value]="category"
             (click)="demo()"
             >category
