Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -39,6 +39,7 @@
     <ng-container *ngFor="let projDetails of allProjects">
       <card-layout
         (onEdit)="editProject($event)"
+        (onDelete)="deleteProject($event)"
         [projectDetails]="projDetails"
       ></card-layout>
     </ng-container>
