Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -18,6 +18,7 @@
               <input
                 class="p-l-10 p-b-5"
                 matInput
+                type="search"
                 placeholder="Search Category Name" [(ngModel)]="searchText"
               />
               <button mat-button matSuffix mat-icon-button>
