--- a/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
+++ b/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
@@ -1,11 +1,20 @@
-<h1 mat-dialog-title>Hi</h1>
+<h1 mat-dialog-title>Confirmation</h1>
 <div mat-dialog-content>
-  <p>What's your favorite animal?</p>
-  <mat-form-field>
-    <input matInput>
-  </mat-form-field>
+  <p class="text-center">Are you sureyou want to delete this project?</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button cdkFocusInitial>Ok</button>
+  <div class="col-sm-6">
+    <button
+      mat-raised-button
+      class="main-color main-button pull-left" (click)="close()">
+      Cancel
+    </button>
+  </div> 
+  <div class="col-sm-6">
+    <button
+      mat-raised-button
+      class="main-background-color main-button color-white pull-right">
+      Ok
+    </button>
+  </div>
 </div>
