--- a/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
+++ b/src/app/shared/dialogs/double-confirmation/double-confirmation-component.html
@@ -14,7 +14,7 @@
     <button
       mat-raised-button
       class="main-background-color main-button color-white pull-right">
-      Ok
+      Delete
     </button>
   </div>
 </div>
