--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -1,4 +1,4 @@
-<a class="box-shadow" (click)="navigationToBOM('bom',projectDetails.projectId)">
+<a class="box-shadow" (click)="navigationToBOM(projectDetails.projectId,projectDetails)">
   <mat-card class="m-t-5 m-b-10">
     <mat-card-content class="mat-card-content">
         <div class="row">
