Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -1,12 +1,54 @@
 <!-- <fix-header></fix-header> -->
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-    <div>
+    <div class="row">
+     <div class="col-sm-12">
       <card-layout
         (onEdit)="editProject($event)"
         (onDelete)="deleteProject($event)"
         [projectDetails]="product"
       ></card-layout>
+     </div>
     </div>
+    <!-- first table structure -->
+    <div class="row">
+     <!-- <div class="col-sm-12"> -->
+       <!-- table structure -->
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-sm-12">
+
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+      
+        <!-- Position Column -->
+        <ng-container matColumnDef="Material Name">
+          <th mat-header-cell *matHeaderCellDef> Material Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.materialName}} </td>
+        </ng-container>
+      
+        <!-- Name Column -->
+        <ng-container matColumnDef="Estimated Quantity">
+          <th mat-header-cell *matHeaderCellDef> Estimated Quantity </th>
+          <td mat-cell *matCellDef="let element"> {{element.estimatedQty}} </td>
+        </ng-container>
+      
+        <!-- Weight Column -->
+        <ng-container matColumnDef="Required Quantity">
+          <th mat-header-cell *matHeaderCellDef> Required Quantity </th>
+          <td mat-cell *matCellDef="let element"> {{element.requiredQty}} </td>
+        </ng-container>
+      
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="Required Date">
+          <th mat-header-cell *matHeaderCellDef> Required Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.requiredDate}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <!-- end structure -->
+     <!-- </div> -->
+    </div>
+    <!-- end of first structure -->
   </div>
 </div>
